--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         <meta name="theme-color" content="#000000" />
         <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
         <link rel="shortcut icon" href="%PUBLIC_URL%/icon.ico" />
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         <title>D3 Project</title>
     </head>
     <body>
